--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Karla:wght@400;800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>Password Generator Rework</title>
   </head>
   <body>
+    <div class="main-container">
+      <h1 class="title">
+        Generate a <span class="break-line green-text">random password</span>
+      </h1>
+      <p class="subtitle">Never use an insecure password again.</p>
+      <button class="generate-p-btn" id="generate-p-btn">
+        Generate passwords
+      </button>
+      <div class="hori-line"></div>
+      <div class="passwords-container">
+        <input type="text" disabled placeholder="random text" />
+        <input type="text" disabled placeholder="random text" />
+      </div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
