finished the requirement design

--- a/index.html
+++ b/index.html
@@ -23,8 +23,18 @@
       </button>
       <div class="hori-line"></div>
       <div class="passwords-container">
-        <input type="text" disabled placeholder="random text" />
-        <input type="text" disabled placeholder="random text" />
+        <input
+          class="generated-p-field"
+          type="text"
+          disabled
+          value="eg<xWij@veiPUwK"
+        />
+        <input
+          class="generated-p-field"
+          type="text"
+          disabled
+          value="eg<xWij@veiPUwK"
+        />
       </div>
     </div>
     <script src="./script.js"></script>
