finished the primary requirements for generating password

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
       <div class="passwords-container">
         <input
           class="generated-p-field"
+          id="generated-p-field1"
           type="text"
           disabled
           value="eg<xWij@veiPUwK"
         />
         <input
           class="generated-p-field"
+          id="generated-p-field2"
           type="text"
           disabled
           value="eg<xWij@veiPUwK"
