added the feature to copy pass to clipboard

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             disabled
             value=""
           />
-          <i class="bi bi-clipboard-fill"></i>
+          <i class="bi bi-clipboard-fill copy-icon" id="copy-icon-one"></i>
         </div>
         <div class="p-field-container">
           <input
@@ -77,12 +77,9 @@
             disabled
             value=""
           />
-          <i class="bi bi-clipboard-fill"></i>
+          <i class="bi bi-clipboard-fill copy-icon" id="copy-icon-two"></i>
         </div>
       </div>
-      <p class="clipboard-tip">
-        Note: Click on the generated password to copy to clipboard.
-      </p>
     </div>
     <script src="./script.js"></script>
   </body>
